# NanoGPT.metal

./: .clang-tidy  CMakeLists.txt  NanoGPT.cpp  README.md
include/: clock.h  functional.h  functional_metal.h  metalBuffer.h  metal_device_resources.h  shape.h  tensor.h  utils.h  wb_loader.h
kernels/: shader.metal
src/: functional.cpp  functional_metal.cpp  metal_device_resources.cpp  shape.cpp  tensor.cpp  utils.cpp  wb_loader.cpp
test/: CMakeLists.txt  activation.cpp  concat.cpp  elementwise.cpp  hello.cpp  hello_test.cpp  linear.cpp  matmul.cpp  shape.cpp  split.cpp  tensor.cpp  test_utils.h  utils.cpp
